--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,5 +108,6 @@
     "src/**/*.ts",
     "src/utils/google-auth/passport.js",
     "src/utils/google-auth/googleAuth.ts"
-  ]
+  ],
+  "exclude": ["**/tests/**"]
 }
