--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,5 +109,5 @@
     "src/utils/google-auth/passport.js",
     "src/utils/google-auth/googleAuth.ts"
   ],
-  "exclude": ["**/tests/**"]
+  "exclude": ["**/__tests__/**"]
 }
